--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     flex-direction: row;
 }
 
+
+
 .image {
     background-image: url("https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg");
     background-repeat: no-repeat;
@@ -11,6 +13,31 @@ body {
     height: 100vh;
     width: 33%;
     overflow: hidden;
+}
+
+.banner {
+    background-color: black;
+    margin-top: 200px;
+    opacity: 50%;
+    height: 175px;
+    width: 100vh;
+}
+
+.logo {
+    background-image: url("https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png");
+    height: 180px;
+    width: 400px;
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.tex {
+    position: absolute;
+    margin-top: -160px;
+    margin-left: 250px;
+    font-size: 130px;
+    color: white;
 }
 
 .top {
@@ -47,6 +74,11 @@ body {
     margin-bottom: 1em;
 }
 
+input {
+    height: 30px;
+    width: 200px;
+}
+
 .form label {
     float: left;
     margin-right: 0.5em;
@@ -59,11 +91,14 @@ fieldset {
 .form-group {
     display: flex;
     flex-direction: row;
+    height: 75px;
 }
 
 form {
     padding: 20px;
     padding-left: 45px;
+    height: 500px;
+    width: 1200px;
 }
 
 .title {
@@ -77,4 +112,21 @@ form {
     height: calc(33% - 10px);
     width: 100%;
     background-color: #F0F0F4;
+}
+
+.submit {
+    position: absolute;
+    margin-top: 80px;
+    margin-left: 15px;
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+    background-color: green;
+    color: white;
+    font-size: 20px;
+}
+
+.underSub {
+    margin-left: 60px;
+    padding-top: 80px;
 }
